test/function/error/mismatch_ret_type.c
float f(double a){
    return a;
}

void f1(){
    return 12;
}

int f2(){
    float b = 11.2;
    return b;
}

double f3(){
    printf("f3 \n");
    return ;
}

int f4() {
    return 11.2;
}